# nebula

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE_TRANSPARENCY.md  CLAUDE_USE.md  DEMO_SCRIPT.md  Dockerfile  Dockerfile.physics  IP_BOUNDARY.md  LICENSE  Makefile  README.md  SUBMISSION.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  requirements-research.txt  tsconfig.json  vite.config.ts
.claude/: launch.json
artifacts/: README.md
backend/: openapi.json  pyproject.toml
backend/app/api/: fixtures_static.py  main.py
backend/app/contracts/: __init__.py  candidate.py  design.py  discovery.py  enums.py  mechanism.py  objective.py  physics.py  provenance.py  providers.py  run.py
backend/app/design/: __init__.py  cache.py  modal_rfdiffusion.py
backend/app/discovery/: __init__.py  capability.py  ladder.py  lanes.py  mechanism.py  scoring.py
backend/app/jobs/: fingerprint.py  orchestrator.py  store.py
backend/app/objective/: compile.py
backend/app/physics/: candidate_specific.py  cluster.py  eligibility.py  qm_worker.py  radical_pair.py  radical_pair_response.py
backend/app/providers/: __init__.py  alphafold.py  base.py  fpbase.py  interpro.py  rcsb.py  uniprot.py
backend/app/providers/fixtures/alphafold/: P0DP23.json
backend/app/providers/fixtures/fpbase/: egfp.json
backend/app/providers/fixtures/interpro/: Q43125.json  Q8LPD9.json
backend/app/providers/fixtures/rcsb/: coords_1B9C.cif  coords_1N9O.cif  coords_5DKL.cif  coords_6QTW.cif  coords_8QI8.cif  entry_1B9C.json  entry_1N9L.json  entry_1N9N.json  entry_1N9O.json  entry_1U3C.json  entry_1U3D.json  entry_5DKL.json  entry_6QTW.json  entry_8QI8.json  search_lov_domain_flavin.json
backend/app/providers/fixtures/uniprot/: P28861.json  P42212.json  Q43125.json  Q8LPD9.json
backend/app/retrieval/: assemble.py  evidence_cards.py  plan.py
backend/app/state/: machine.py
backend/tests/: test_alphafold_provider.py  test_deploy.py  test_design_adapter.py  test_design_cache.py  test_evidence_registry.py  test_fpbase_provider.py  test_hardening.py  test_interpro_provider.py  test_phase1.py  test_phase3.py  test_phase35.py  test_phase4.py  test_phase8.py  test_radical_pair.py  test_rcsb_provider.py  test_release_blockers.py  test_uniprot_provider.py
docs/: DATA_CONTRACTS.md  DESIGN_ADAPTERS.md  LIBRARY_ROADMAP.md  README.md  RESEARCH_ADAPTERS.md  SWARM_ARCHITECTURE.md
e2e/: backend-flow.spec.ts  discovery.spec.ts
scripts/: README.md  capture_screenshots.mjs  check_bundle_budget.mjs  container_smoke.py  solve_ivp_crosscheck.py
src/: main.tsx
tests/: adapters.test.ts  analogIndex.test.ts  (+22 more)
(+171 files in other folders)
