[project]
name = "nebula-discovery-api"
version = "2.0.0"
description = "Nebula Discover — public-protein discovery API (retrieve → enrich → gate → simulate → rank)."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.138.2",
  "pydantic==2.13.4",
  "httpx==0.28.1",
  "tenacity==9.1.4",
  "uvicorn[standard]==0.35.0",
  "biopython==1.85",
  "gemmi==0.7.5",
  "numpy==2.4.6",
  "scipy==1.16.0",
  # coarse per-protein magnetic field effect estimate (physics/radical_pair_response.py). Imported
  # lazily and degrades to None if unavailable, so a slim build that drops it never breaks the app.
  "radicalpy==1.0.9",
]

[project.optional-dependencies]
# heavy / isolated (run in subprocesses; NOT imported in the API process)
physics = ["pyscf==2.12.1"]
retrieval = ["torch>=2.2", "fair-esm>=2.0", "scikit-learn>=1.4"]
dev = ["pytest==8.4.2"]
# artifact generation ONLY: scripts/physics/radical_pair_mary.py builds the committed MARY
# reference. radicalpy pulls MDAnalysis (needs a C toolchain to compile) and is NOT imported by
# the API process or the tests, so it is kept out of the slim runtime image.
artifact-gen = ["radicalpy==1.0.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Install only the app package (exclude tests) so `pip install ./backend` works in the
# container. The committed QM cache + provider fixtures ship as package data.
[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app" = ["physics/qm_cache/*.json", "physics/radical_pair_cache/*.json", "providers/fixtures/**/*"]
